samples/_failures_safe/1761140318_ca5260_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_370942c6.c: In function ‘main’:
./samples/SAFE/__tmp_370942c6.c:167:35: error: missing terminating ' character
  167 |     input[strcspn(input, "\n")] = '\
      |                                   ^~
./samples/SAFE/__tmp_370942c6.c:167:5: error: expected expression at end of input
  167 |     input[strcspn(input, "\n")] = '\
      |     ^~~~~
./samples/SAFE/__tmp_370942c6.c:167:5: error: expected declaration or statement at end of input
